# apecs

./: .gitignore  Cargo.toml  README.md  benchmarks.yaml  rustfmt.toml
crates/apecs/: Cargo.toml
crates/apecs-derive/: Cargo.toml
crates/apecs-derive-canfetch/: Cargo.toml
crates/apecs-derive-canfetch/src/: lib.rs
crates/apecs-derive/src/: lib.rs
crates/apecs/benches/: add_remove.rs  benchmark.rs  create_move_print.rs  frag_iter.rs  heavy_compute.rs  schedule.rs  schedule_archetype.rs  simple_insert.rs  simple_iter.rs
crates/apecs/benches/benchmark/: create_move_print.rs
crates/apecs/benches/bevy/: frag_iter.rs  heavy_compute.rs  simple_insert.rs
crates/apecs/benches/hecs/: simple_insert.rs
crates/apecs/benches/shipyard/: heavy_compute.rs  simple_insert.rs
crates/apecs/src/: core.rs  entities.rs  entity.rs  facade.rs  fetch.rs  join.rs  lib.rs  main.rs  plugin.rs  plugins.rs  resource_manager.rs  schedule.rs  storage.rs  system.rs  world.rs
crates/apecs/src/archetype/: bundle.rs  mod.rs
crates/apecs/src/core/: fetch.rs
crates/apecs/src/plugins/: entity_creation.rs  entity_upkeep.rs  mod.rs
crates/apecs/src/storage/: btree.rs  join.rs  mod.rs  range_map.rs  rayon_concat.rs  sparse.rs  tracking.rs  vec.rs
crates/apecs/src/storage/archetype/: all.rs  archetype.rs  bundle.rs  components.rs  mod.rs  query.rs  set.rs
crates/apecs/src/storage/separate/: join.rs  join_old.rs  mod.rs  range_map.rs  sparse.rs  tracking.rs  vec.rs
crates/apecs/src/storage/separated/: join-old.rs  join.rs  mod.rs
crates/apecs/tests/: regression.rs  unit.rs  wasm.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: add_remove.rs  benchmarks.rs  frag_iter.rs  heavy_compute.rs  schedule.rs  simple_insert.rs  simple_iter.rs
crates/benchmarks/benches/bevy/: add_remove.rs  schedule.rs  simple_iter.rs
crates/benchmarks/benches/hecs/: frag_iter.rs  heavy_compute.rs
crates/benchmarks/benches/planck_ecs/: mod.rs  schedule.rs  simple_insert.rs
crates/benchmarks/benches/shipyard/: add_remove.rs  frag_iter.rs  schedule.rs  simple_iter.rs
crates/benchmarks/benches/specs/: schedule.rs
crates/benchmarks/src/: main.rs
crates/ecs-bench/: Cargo.toml
crates/ecs-bench/src/: main.rs
crates/example/: Cargo.toml
crates/example/src/: main.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: bench.rs  main.rs
manual/: .gitignore  book.toml
manual/src/: SUMMARY.md  apecs.md  introduction.md
