[package]
name = "apecs-derive-canfetch"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "ecs", "async"]
documentation = "https://docs.rs/apecs/"
repository = "https://github.com/schell/apecs"
categories = ["concurrency", "game-engines"]
description = "helper for writing apecs procedural macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
proc-macro2 = "^1.0"
quote = "^1.0"
syn = "^1.0"
