[package]
name = "apecs"
version = "0.2.4"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "ecs", "async"]
readme = "../../README.md"
documentation = "https://docs.rs/apecs/"
repository = "https://github.com/schell/apecs"
categories = ["concurrency", "game-engines"]
description = "An asyncronous and parallel entity-component system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug-async = []

[lib]
name = "apecs"
path = "src/lib.rs"
bench = false

[dependencies]
anyhow = "^1.0"
apecs-derive = { version = "0.1.3", path = "../apecs-derive" }
async-broadcast = "^0.4"
async-channel = "^1.6"
async-executor = "^1.4"
async-oneshot = "^0.5"
hibitset = "^0.6"
rayon = "^1.5"
rustc-hash = "^1.1"
log = "^0.4"

[dev-dependencies]
async-timer = "^0.7"
bevy_ecs = "0.5.0"
bevy_tasks = "0.5.0"
cgmath = { version = "0.17", features = ["serde"] }
criterion = "^0.3"
env_logger = "^0.9"
hecs = { version = "0.5", features = ["column-serialize", "row-serialize"] }
legion = "0.3"
planck_ecs = { version = "1.1.0", features = ["parallel"] }
shipyard = "0.5.0"
specs = {version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
wasm-bindgen-test = "^0.3"

[[bench]]
name = "benchmark"
harness = false
