[package]
name = "apecs"
version = "0.5.3"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "ecs", "async"]
readme = "../../README.md"
documentation = "https://docs.rs/apecs/"
repository = "https://github.com/schell/apecs"
categories = ["concurrency", "game-engines"]
description = "An asyncronous and parallel entity-component system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["derive"]
derive = []

[lib]
name = "apecs"
path = "src/lib.rs"
bench = false

[dependencies]
anyhow = "^1.0"
any_vec = "^0.10"
apecs-derive = { version = "^0.2.3", path = "../apecs-derive" }
async-broadcast = "^0.4"
async-channel = "^1.6"
async-executor = "^1.4"
async-oneshot = "^0.5"
casuarius = "^0.1"
itertools = "^0.10"
log = "^0.4"
parking_lot = "^0.12"
rayon = "^1.5"
rustc-hash = "^1.1"
smallvec = "^1.9"

[dev-dependencies]
async-timer = "^0.7"
env_logger = "^0.9"
wasm-bindgen-test = "^0.3"
