[package]
name = "apecs"
version = "0.8.2"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "ecs", "async"]
readme = "../../README.md"
documentation = "https://docs.rs/apecs/"
repository = "https://github.com/schell/apecs"
categories = ["concurrency", "game-engines"]
description = "An asyncronous and parallel entity-component system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["derive", "panic_on_async_holdup"]
panic_on_async_holdup = []
derive = []

[lib]
name = "apecs"
path = "src/lib.rs"
bench = false

[dependencies]
any_vec = "0.10"
apecs-derive = { version = "0.3.0", path = "../apecs-derive" }
async-channel = "1.6"
moongraph = { version = "0.4.2", default-features = false, features = ["parallel"] }
itertools = "0.10"
log = "0.4"
parking_lot = "0.12"
rayon = "1.5"
smallvec = "1.9"
snafu = "0.8"

[dev-dependencies]
async-broadcast = "0.4"
env_logger = "0.9"
futures-lite = "1.12.0"
smol = "2.0"
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"
