[package]
name = "ecs-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apecs = { path = "../apecs" }
cgmath = { version = "0.17", features = ["serde"] }

[[bin]]
name = "ecs-bench"
path = "src/main.rs"
