[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
clap = { version = "^3.0", features = ["derive"] }
duct = "^0.13"
nom = "^7.1"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.8"
tracing = "^0.1"
tracing-subscriber = "^0.3"
